# web_hw8

hw8/: pyproject.toml
hw8/hw8/part_1/: seeds.py
hw8/hw8/part_2/: consumer.py  models.py  producer.py
